p2/confs/app2-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=👋 Hello from App2!"
        - "-listen=:8080"
        ports:
        - containerPort: 8080
